[gd_scene format=3 uid="uid://codexpanel"]

[ext_resource type="Script" path="res://scripts/ui/CodexPanel.gd" id="1"]

[node name="CodexPanel" type="PanelContainer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -300.0
offset_right = 450.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 6

[node name="HeaderBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.9, 0.85, 0.6, 1)
text = "Codex"

[node name="CloseButton" type="Button" parent="VBoxContainer/HeaderBar"]
layout_mode = 2
custom_minimum_size = Vector2(32, 32)
text = "X"

[node name="TabBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="FusionsTab" type="Button" parent="VBoxContainer/TabBar"]
layout_mode = 2
text = "Fusions"

[node name="TowersTab" type="Button" parent="VBoxContainer/TabBar"]
layout_mode = 2
text = "Towers"

[node name="ElementsTab" type="Button" parent="VBoxContainer/TabBar"]
layout_mode = 2
text = "Elements"

[node name="EnemiesTab" type="Button" parent="VBoxContainer/TabBar"]
layout_mode = 2
text = "Enemies"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ContentContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4
